# albert-code

./: CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  albert-acp.spec  pyproject.toml  snapshot_report.html
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: build-and-upload.yml  release.yml
albert_code/: __init__.py  whats_new.md
albert_code/acp/: acp_agent_loop.py  acp_logger.py  entrypoint.py  utils.py
albert_code/acp/tools/: base.py  session_update.py
albert_code/cli/: cli.py  clipboard.py  commands.py  entrypoint.py  terminal_setup.py
albert_code/cli/autocompletion/: path_completion.py  slash_command.py
albert_code/cli/plan_offer/: decide_plan_offer.py
albert_code/core/: __init__.py  agent_loop.py  config.py  logger.py  middleware.py  output_formatters.py  programmatic.py  proxy_setup.py  system_prompt.py  trusted_folders.py  types.py  utils.py
albert_code/core/auth/: github.py  (+1 more)
distribution/zed/: extension.toml
docs/: README.md  acp-setup.md  proxy-setup.md
scripts/: install-albert.sh  install.sh  prepare_release.py
tests/: conftest.py  test_agent_auto_compact.py  test_agent_backend.py  test_agent_observer_streaming.py  test_agent_stats.py  test_agent_tool_call.py  test_agents.py  test_cli_programmatic_preload.py  test_history_manager.py  test_message_id.py  test_message_merging.py  test_middleware.py  test_reasoning_content.py  test_system_prompt.py  test_tagged_text.py  test_ui_external_editor.py  test_ui_input_history.py
tests/acp/: conftest.py  test_acp.py  test_agent_thought.py  test_bash.py  test_compact_session_updates.py  test_content.py  test_initialize.py  test_list_sessions.py  test_load_session.py  test_multi_session.py  test_new_session.py  test_proxy_setup_acp.py  test_read_file.py  test_search_replace.py  test_set_config_option.py  test_set_mode.py  test_set_model.py  test_tool_call_session_update.py  test_utils.py  test_write_file.py
tests/autocompletion/: test_file_indexer.py  test_fuzzy.py  test_path_completer_fuzzy.py  test_path_completer_recursive.py  test_path_completion_controller.py  test_path_prompt_transformer.py  test_slash_command_controller.py  test_ui_chat_autocompletion.py
tests/backend/: test_anthropic_adapter.py  test_backend.py  test_vertex_anthropic_adapter.py
tests/cli/: test_bell_notifications.py  test_braille_renderer.py  test_clipboard.py  test_commands.py  test_copy_shortcuts.py  test_external_editor.py  test_no_markup_static.py  test_question_app.py  test_spinner.py  test_switching_mode.py  test_ui_clipboard_notifications.py  test_ui_session_incremental_renderer.py  test_ui_session_resume.py
tests/core/: test_agents.py  test_auth_crypto.py  test_auth_github.py  test_config_load_dotenv.py  test_config_paths.py  test_config_resolution.py  test_file_logging.py  test_proxy_setup.py  test_telemetry_send.py  test_teleport_git.py  test_teleport_nuage.py  test_teleport_service.py  test_trusted_folders.py
tests/e2e/: common.py  conftest.py  test_cli_tui_onboarding.py  test_cli_tui_streaming.py
tests/mock/: mock_backend_factory.py  mock_entrypoint.py  utils.py
tests/onboarding/: test_run_onboarding.py  test_ui_onboarding.py
tests/session/: test_session_loader.py  test_session_logger.py  test_session_migration.py
tests/skills/: conftest.py  test_manager.py  test_models.py  test_parser.py
tests/snapshots/: base_snapshot_test_app.py  conftest.py  test_ui_snapshot_ask_user_question.py  test_ui_snapshot_code_block_horizontal_scrolling.py  test_ui_snapshot_parallel_tool_calls.py  test_ui_snapshot_proxy_setup.py  test_ui_snapshot_question_app.py  test_ui_snapshot_reasoning_content.py  test_ui_snapshot_release_update_notification.py  test_ui_snapshot_session_resume.py  test_ui_snapshot_streaming_tool_call.py  test_ui_snapshot_teleport.py  test_ui_snapshot_whats_new.py
tests/stubs/: fake_backend.py  fake_tool.py
tests/tools/: test_ask_user_question.py  test_bash.py  test_grep.py  test_invoke_context.py  test_manager_get_tool_config.py  test_mcp.py  test_mcp_sampling.py  test_task.py  test_ui_bash_execution.py  test_webfetch.py  test_websearch.py
tests/update_notifier/: test_do_update.py  test_filesystem_update_cache_repository.py  test_github_update_gateway.py  test_pypi_update_gateway.py  test_ui_update_notification.py  test_update_use_case.py  test_whats_new.py
(+110 files in other folders)
